--- a/user/landing-page-user.html
+++ b/user/landing-page-user.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-primary">
+    <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-md">
-        <a class="navbar-brand text-light" href="#">Navbar</a>
+        <a class="navbar-brand text-dark fw-bold" href="#">Reservasi Rumah Sakit</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,17 +33,17 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item me-5">
-              <a class="nav-link active text-light" aria-current="page" href="#"
+              <a class="nav-link active text-dark fw-semibold aria-current="page" href="#"
                 >Beranda</a
               >
             </li>
             <li class="nav-item me-5">
-              <a class="nav-link text-light" href="#">Dokter</a>
+              <a class="nav-link text-dark fw-semibold" href="#">Dokter</a>
             </li>
             <li class="nav-item me-5">
-              <a class="nav-link text-light" href="#">Tentang Kami</a>
+              <a class="nav-link text-dark " href="#">Tentang Kami</a>
             </li>
-            <button type="button" class="btn btn-primary px-3 border-light">
+            <button type="button" class="btn btn-primary px-4 border-light ">
               Login
             </button>
           </ul>
