--- a/dokter/profile-dokter.html
+++ b/dokter/profile-dokter.html
@@ -7,11 +7,32 @@
     <title>Reservasi Rumah Sakit</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <style>
+        .bg-blue {
+            background-color: #212e77;
+        }
+
+        .img-custom {
+            margin-top: 0px;
+            height: 170px;
+            width: 100%;
+        }
+
+        .img-jdwl {
+            height: 400px;
+            width: 90%;
+        }
+
+        .card-img {
+            height: 300px;
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg sticky-top z-index-1" style="background-color:#212e77;">
+    <nav class="navbar navbar-expand-lg bg-blue sticky-top z-index-1">
         <div class="container">
             <ul class="navbar-nav">
                 <li class="nav-item me-2">
@@ -31,8 +52,8 @@
                 </li>
             </ul>
         </div>
-        <div class="btn me-5">
-            <a href="./login-user.html"><button type="button" class="btn btn-primary px-4">
+        <div class="me-5">
+            <a href="/user/login-user.html"><button type="button" class="btn btn-primary  px-4 py-1">
                     Login
                 </button></a>
         </div>
@@ -40,28 +61,27 @@
     <!-- navbar end -->
 
     <!-- hero section -->
-    <section class="hero">
-        <div class="bg-image" style="background-image: url('/asset/Group\ 94\ \(1\).png'); height: 500px;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6" style="margin-top: 150px;">
-                        <h1>Kesembuhan Anda,Kebahagiaan Kami</h1>
-                        <p>
-                            jogja health care berkomitmen untuk memberikan pelayanan terbaik
-                            kepada semua orang. Semua tenaga medis kami sudah terlatih dan
-                            siap untuk memberikan pelayanan maksimal
-                        </p>
-                        <button class="btn btn-primary">Daftarkan Pasien</button>
-                    </div>
+    <section>
+        <a href="/user/regist-user.html"><img class="img-custom object-fit-cover " src="/asset/SubHead.png" alt=""></a>
+        <div class="container mt-5 mb-5">
+            <div class="d-flex flex-row justify-content-center">
+                <div class="card">
+                    <img src="/asset/Rectangle 20.png " alt="img">
+                </div>
+                <div class="card ms-3 px-3 py-3 text-center " style="background-color: #D9D9D9; width: 30%;">
+                    <br><br><br>
+                    <h5> Dr.h.Rangga Nugraha S.Pd, M.Pd</h5>
+                    <p>Spesialis Kelamin</p>
+                    <h6>Jadwal Praktik</h6>
+                    <p class="lh-base">Senin : 08.30 - 10.30 <br>Rabu : 09.30 - 14.30 <br>Kamis : 11.30 - 17.30</p><br
+                        <a href="#"><button type="button" class="btn btn-danger w-100">kembali</button></a>
                 </div>
             </div>
-        </div>
-       
     </section>
     <!-- hero section end -->
 
     <!-- footer -->
-    <footer class="footer p-5" style="background-color: #212e77">
+    <footer class="footer p-5 bg-blue">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 text-light">
@@ -91,8 +111,8 @@
     <!-- footer -->
     <!-- cdn js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-        </script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
