--- a/reservasi/reservasi-lanjut.html
+++ b/reservasi/reservasi-lanjut.html
@@ -7,15 +7,35 @@
     <title>Reservasi Rumah Sakit</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <style>
+        .bg-blue {
+            background-color: #212e77;
+        }
+
+        .img-custom {
+            margin-top: 0px;
+            height: 170px;
+            width: 100%;
+        }
+
+        .bg-pink {
+            background-color: #F0DCDC;
+        }
+
+        .clr-input {
+            background-color: #C8B6B6;
+        }
+    </style>
 </head>
 
 <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg sticky-top z-index-1" style="background-color:#212e77;">
+    <nav class="navbar navbar-expand-lg bg-blue sticky-top z-index-1">
         <div class="container">
             <ul class="navbar-nav">
                 <li class="nav-item me-2">
-                    <a class="nav-link active text-light fw-semibold" href="landing-page-user.html">Beranda</a>
+                    <a class="nav-link active text-light fw-semibold aria-current=" page"
+                        href="landing-page-user.html">Beranda</a>
                 </li>
                 <li class="nav-item me-2">
                     <a class="nav-link text-light fw-semibold " href="./regist-user.html">Pendaftaran Pasien</a>
@@ -31,37 +51,56 @@
                 </li>
             </ul>
         </div>
-        <div class="btn me-5">
-            <a href="./login-user.html"><button type="button" class="btn btn-primary px-4">
+        <div class="me-5">
+            <a href="/user/login-user.html"><button type="button" class="btn btn-primary px-4">
                     Login
                 </button></a>
         </div>
     </nav>
     <!-- navbar end -->
 
-    <!-- hero section -->
-    <section class="hero">
-        <div class="bg-image" style="background-image: url('/asset/Group\ 94\ \(1\).png'); height: 500px;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6" style="margin-top: 150px;">
-                        <h1>Kesembuhan Anda,Kebahagiaan Kami</h1>
-                        <p>
-                            jogja health care berkomitmen untuk memberikan pelayanan terbaik
-                            kepada semua orang. Semua tenaga medis kami sudah terlatih dan
-                            siap untuk memberikan pelayanan maksimal
-                        </p>
-                        <button class="btn btn-primary">Daftarkan Pasien</button>
-                    </div>
-                </div>
-            </div>
+    <!-- section -->
+    <section>
+        <div class="conatiner">
+            <a href="/user/regist-user.html"><img class="img-custom" src="/asset/SubHead.png" alt=""></a>
         </div>
-       
+
+        <div class="row justify-content-center mt-5 rounded">
+            <div class="col-md-4 border p-4 rounded mb-5 bg-pink">
+                <div class="text-center mb-5">
+                    <h4>Pendaftaran Pasien Reservasi</h4>
+                </div>
+
+                <form method="POST" class="form">
+                    <div class="mb-3">
+                        <label class="form-label fw-semibold">Dokter</label>
+                        <input type="text" class="form-control clr-input" id="namapasien"
+                            placeholder="silahkan anda memilih dokter">
+                    </div>
+
+                    <div class="mb-3">
+                        <label class="form-label fw-semibold">Tanggal Periksa</label>
+                        <input type="date" class="form-control clr-input" id="alamat"
+                            placeholder="silahkan masukan tanggal periksa">
+                    </div>
+
+
+                    <div class="form-text text-danger fw-semibold mb-2">*) Wajib diisi</div>
+                    <div class="d-flex justify-content-between">
+                        <a href="/reservasi/reservasi.html"> <button type="button"
+                                class="btn btn-danger py-1 ">Kembali</button></a>
+                        <a href="/reservasi/reservasi-pembayaran.html"><button type="button"
+                                class="btn btn-primary py-1 ">Selanjutnya</button></a>
+                    </div>
+                </form>
+            </div>
+            <!-- form section end -->
+
     </section>
-    <!-- hero section end -->
+    <!-- section end -->
 
     <!-- footer -->
-    <footer class="footer p-5" style="background-color: #212e77">
+    <footer class="footer pt-3 bg-blue ">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 text-light">
@@ -91,8 +130,8 @@
     <!-- footer -->
     <!-- cdn js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-        </script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
