--- a/user/landing-page-user.html
+++ b/user/landing-page-user.html
@@ -9,6 +9,13 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 </head>
 
+<style>
+    .img-jdwl {
+        height: 400px;
+        width: 90%;
+    }
+</style>
+
 <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg sticky-top z-index-1" style="background-color:#212e77;">
@@ -40,7 +47,7 @@
     <!-- navbar end -->
 
     <!-- hero section -->
-    <section class="hero">
+    <div class="hero">
         <div class="bg-image" style="background-image: url('/asset/Group\ 94\ \(1\).png'); height: 500px;">
             <div class="container">
                 <div class="row">
@@ -56,7 +63,259 @@
                 </div>
             </div>
         </div>
-       
+        <div class="container mt-5 mb-5">
+            <div class="text-center mb-5">
+                <h1>POLI KLINIK</h1>
+            </div>
+            <div class="row row-cols-3 row-cols-md-4 mx-5">
+                <div class="col">
+                    <div class="card mb-4">
+                        <div class="card-body text-center">
+                            <img src="/asset/Vector.png" alt="img">
+                            <h5 class="card-title mt-3">Poli Mata</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <img src="/asset/Vector.png" alt="img">
+                            <h5 class="card-title mt-3">Poli Mata</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <img src="/asset/Vector.png" alt="img">
+                            <h5 class="card-title mt-3">Poli Mata</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <img src="/asset/Vector.png" alt="img">
+                            <h5 class="card-title mt-3">Poli Mata</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card mb-4">
+                        <div class="card-body text-center">
+                            <img src="/asset/Vector.png" alt="img">
+                            <h5 class="card-title mt-3">Poli Mata</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <img src="/asset/Vector.png" alt="img">
+                            <h5 class="card-title mt-3">Poli Mata</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <img src="/asset/Vector.png" alt="img">
+                            <h5 class="card-title mt-3">Poli Mata</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <img src="/asset/Vector.png" alt="img">
+                            <h5 class="card-title mt-3">Poli Mata</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <img src="/asset/Vector.png" alt="img">
+                            <h5 class="card-title mt-3">Poli Mata</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <img src="/asset/Vector.png" alt="img">
+                            <h5 class="card-title mt-3">Poli Mata</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <img src="/asset/Vector.png" alt="img">
+                            <h5 class="card-title mt-3">Poli Mata</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <img src="/asset/Vector.png" alt="img">
+                            <h5 class="card-title mt-3">Poli Mata</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="text-center">
+        <img src="/asset/Group 219.png" class="rounded mt-5 img-jdwl" alt="img">
+    </div>
+    <div class="container text-center mt-5 mb-5">
+        <div class="text-center mb-5">
+            <h1>DOKTER</h1>
+        </div>
+        <div class="d-flex flex-row justify-content-center">
+            <div class="card" style="width: 18rem;">
+                <img src="/asset/Rectangle 20.png" class="card-img-top card-img" alt="card">
+                <div class="card-body" style="background-color: #BFD2F8;">
+                    <h5 class="card-title">Nama Dokter </h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                        of
+                        the card's content.</p>
+                    <a href="#" class="btn btn-primary w-100 bg-blue">View Profile</a>
+                </div>
+            </div>
+            <div class="card ms-4" style="width: 18rem;">
+                <img src="/asset/Rectangle 20.png" class="card-img-top card-img" alt="card">
+                <div class="card-body" style="background-color: #BFD2F8;">
+                    <h5 class="card-title">Nama Dokter </h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                        of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary w-100 bg-blue">View Profile</a>
+                </div>
+            </div>
+            <div class="card ms-4" style="width: 18rem;">
+                <img src="/asset/Rectangle 20.png" class="card-img-top card-img" alt="card">
+                <div class="card-body" style="background-color: #BFD2F8;">
+                    <h5 class="card-title">Nama Dokter </h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                        of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary w-100 bg-blue">View Profile</a>
+                </div>
+            </div>
+        </div>
+        <div class="text-center mb-5 mt-4">
+            <input class="form-check-input" type="radio" name="radioNoLabel" id="radioNoLabel1" value=""
+                aria-label="..." checked />
+            <input class="form-check-input" type="radio" name="radioNoLabel" id="radioNoLabel2" value=""
+                aria-label="..." />
+            <input class="form-check-input" type="radio" name="radioNoLabel" id="radioNoLabel2" value=""
+                aria-label="..." />
+        </div>
+    </div>
+
+    <div class="container mt-5 mb-5">
+        <div class="text-center mb-5">
+            <h1>BERITA</h1>
+        </div>
+        <div class="row row-cols-1 row-cols-md-2 g-3">
+            <div class="col">
+                <div class="card">
+                    <img src="/asset/Rectangle 13 (3).png" class="card-img-top" alt="card example" />
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                        <a href=""><button type="button" class="btn btn-dark rounded-pill">Read More -></button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="/asset/Rectangle 13 (1).png" class="card-img-top" alt="card example"
+                        style="height: 337px;" />
+                    <div class="card-body">
+                        <h5 class="card-title ">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                        <a href=""><button type="button" class="btn btn-dark rounded-pill">Read More -></button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="/asset/Rectangle 13.png" class="card-img-top" alt="card example" />
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                            to additional content.</p>
+                        <a href=""><button type="button" class="btn btn-dark rounded-pill">Read More -></button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="/asset/Rectangle 13 (2).png" class="card-img-top" alt="card example" />
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                        <a href=""><button type="button" class="btn btn-dark rounded-pill">Read More -></button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="text-center mb-5 mt-4">
+        <input class="form-check-input" type="radio" name="radioNoLabel" id="radioNoLabel1" value="" aria-label="..."
+            checked />
+        <input class="form-check-input" type="radio" name="radioNoLabel" id="radioNoLabel2" value="" aria-label="..." />
+        <input class="form-check-input" type="radio" name="radioNoLabel" id="radioNoLabel2" value="" aria-label="..." />
+    </div>
+    <div class="container mb-5">
+        <h1 class="text-center mb-4">Contact</h1>
+        <div class="row row-cols-1 row-cols-md-4 g-1">
+            <div class="col">
+                <div class="card p-3" style="width: 15rem; height: 236px;">
+                    <div class="card-body">
+                        <img src="/asset/ambulance.png" alt="img" style="width: 50px;" class="mb-3">
+                        <p class="fw-semibold">Emergency</p>
+                        <p class="lh-base">+628123456789 <br>+628123456789</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card p-3" style="width: 15rem; height: 236px;">
+                    <div class="card-body">
+                        <img src="/asset/location.png" alt="img" style="width: 50px;" class="mb-3">
+                        <p class="fw-semibold">Location</p>
+                        <p class="lh-base">Jakarta,selatan</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card p-3" style="width: 15rem; height: 236px;">
+                    <div class="card-body">
+                        <img src="/asset/email.png" alt="img" style="width: 50px;" class="mb-3">
+                        <p class="fw-semibold">Email</p>
+                        <p class="lh-base">example@gmail.com <br> example1@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card p-3" style="width: 15rem; height: 236px;">
+                    <div class="card-body">
+                        <img src="/asset/clock.png" alt="img" style="width: 50px;" class="mb-3">
+                        <p class="fw-semibold">Working Hours</p>
+                        <p class="lh-base">Mon - Sat <br> 9.20 - 17.00</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     </section>
     <!-- hero section end -->
 
