--- a/apotik/apotik.html
+++ b/apotik/apotik.html
@@ -22,6 +22,15 @@
             height: 400px;
             width: 90%;
         }
+
+        .card-img {
+            height: 300px;
+            width: 100%;
+        }
+
+        .clr-input {
+            background-color: #D9DCE1;
+        }
     </style>
 </head>
 
@@ -56,49 +65,24 @@
     <!-- navbar end -->
 
     <!-- hero section -->
-    <section class="hero-section">
-        <div class="conatiner">
-            <a href="/user/regist-user.html"><img class="img-custom object-fit-cover" src="/asset/SubHead.png"
-                    alt=""></a>
+    <section>
+        <a href="/user/regist-user.html"><img class="img-custom object-fit-cover " src="/asset/SubHead.png"
+                alt="img"></a>
+        <div class="text-center">
+            <img src="/asset/hospital.png" alt="">
+        </div>
+        <div class="container">
             <div class="text-center">
-                <img src="/asset/Group 219.png" class="rounded mt-5 img-jdwl" alt="img">
+                <h4>Silahkan Pilih Poliklinik Yang anda Butuhkan</h4>
             </div>
-            <div class="container text-center mt-5 mb-5">
-                <div class="row">
-                    <div class="col">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="/asset/female doctor and male doctor standing together.png" alt="img">
-                                <a href="#" class="btn btn-primary mt-2" style="width: 100%;">Reservasi</a>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam,
-                                    veritatis! Ex dignissimos magni nihil eveniet quasi.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="/asset/female doctor and male doctor standing together.png" alt="img">
-                                <a href="#" class="btn btn-primary mt-2" style="width: 100%;">Riwayat</a>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam,
-                                    veritatis! Ex dignissimos magni nihil eveniet quasi.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="/asset/female doctor and male doctor standing together.png" " alt=" img">
-                                <a href="#" class="btn btn-primary mt-2" style="width: 100%;">Apotik</a>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam,
-                                    veritatis! Ex dignissimos magni nihil eveniet quasi.</p>
-                            </div>
-                        </div>
-                    </div>
+            <div class="row row-cols-3 row-cols-md-4 mx-5">
+                <div class="col">
+
                 </div>
             </div>
         </div>
     </section>
+
     <!-- hero section end -->
 
     <!-- footer -->
